--- a/store/templates/store/page_layout.html
+++ b/store/templates/store/page_layout.html
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="{% static 'css/store_styles.css' %}">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
@@ -41,16 +43,19 @@
 
     <div class="product-information-wrapper">
       {% block product_information %}
+        <p class="information-placeholder-label">Product Information goes here</p>
       {% endblock %}
     </div>
 
     <div class="product-specifications-wrapper">
       {% block product_specifications %}
+        <p class="specification-placeholder-label">Product Specification goes here</p>
       {% endblock %}
     </div>
 
     <div class="product-reviews-wrapper">
       {% block product_reviews %}
+        <p class="specification-placeholder-label">Product Reviews goes here</p>
       {% endblock %}
     </div>
   </body>
