--- a/store/templates/store/page_layout.html
+++ b/store/templates/store/page_layout.html
@@ -54,6 +54,27 @@
 
     <div class="product-menu-container">
       {% block product_menu %}
+      <div class="product-menu-wrapper d-flex justify-content-center align-items-center h-100">
+        <div class="product-menu-content d-flex h-100 w-100">
+          <div class="all-products-menu menu-item-wrapper d-flex justify-content-center align-items-center px-3 mx-1">
+            <div class="navbar-menu-item">
+              ALL PRODUCTS
+            </div>
+          </div>
+
+          <div class="televisions-menu menu-item-wrapper d-flex justify-content-center align-items-center px-3 mx-1">
+            <div class="navbar-menu-item">
+              Televisions
+            </div>
+          </div>
+
+          <div class="accessories-menu menu-item-wrapper d-flex justify-content-center align-items-center px-3 mx-1">
+            <div class="navbar-menu-item">
+              Accessories
+            </div>
+          </div>
+        </div>
+      </div>
       {% endblock %}
     </div>
 
