--- a/store/templates/store/product_information.html
+++ b/store/templates/store/product_information.html
@@ -1,3 +1,3 @@
-{% extends 'store/product_information.html' %}
+{% extends 'store/page_layout.html' %}
 
 {% block title %}{{ title }}{% endblock %}
