added hyperlinking to logo

--- a/store/templates/store/page_layout.html
+++ b/store/templates/store/page_layout.html
@@ -13,6 +13,7 @@
     <link href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" rel="stylesheet">
 
     <link rel="stylesheet" href="{% static 'css/store_styles.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -30,7 +31,9 @@
       {% block brand_navbar %}
         <div class="navbar-container d-flex justify-content-center py-2">
           <div class="navbar-container-wrapper d-flex flex-row flex-nowrap justify-content-center align-items-center">
-            <img src="{% static 'images/the_good_guys.png' %}" alt="logo" class="navbar-logo-image">
+            <a href="{% url 'core:home' %}" class="logo-container py-2">
+              <img src="{% static 'images/the_best_guys.png' %}" alt="logo" class="navbar-logo-image">
+            </a>
   
             <div class="search-wrapper d-inline-flex align-items-center px-5 flex-fill">
               <form class="search-form w-100" action="#" method="GET">
@@ -55,8 +58,8 @@
     <div class="product-menu-container">
       {% block product_menu %}
       <div class="product-menu-wrapper d-flex justify-content-center align-items-center h-100">
-        <div class="product-menu-content d-flex h-100 w-100">
-          <div class="all-products-menu menu-item-wrapper d-flex justify-content-center align-items-center px-3 mx-1">
+        <div class="product-menu-content d-flex h-100">
+          <div class="all-products-menu menu-item-wrapper d-flex justify-content-center align-items-center pe-3 mx-1">
             <div class="navbar-menu-item">
               ALL PRODUCTS
             </div>
@@ -82,7 +85,7 @@
       {% block breadcrumbs %}
         <div class="breadcrumbs-wrapper d-flex justify-content-center align-items-center mt-2">
           <div class="breadcrumbs-content d-flex">
-            {% block breadcrumbs_text %}<a href="#" class="breadcrumbs-link">Development</a> / <a href="#" class="breadcrumbs-link">Testing</a> / <a href="#" class="breadcrumbs-link">Breadcrumbs</a>{% endblock %}
+            {% block breadcrumbs_text %}<a href="#" class="breadcrumbs-link">Development</a> / <a href="#" class="breadcrumbs-link">Testing</a> / <span href="#" class="breadcrumbs-text">Breadcrumbs</a>{% endblock %}
           </div>
         </div>
       {% endblock %}
