--- a/store/static/css/store_styles.css
+++ b/store/static/css/store_styles.css
@@ -8,7 +8,7 @@ a
     color: inherit;
 }
 
-.brand-navbar-container, .navbar-container
+.brand-navbar-container, .navbar-container, .logo-container
 {
     height: 4rem;
 }
@@ -45,6 +45,12 @@ a
 .breadcrumbs-link:hover
 {
     color: #17436c;
+}
+
+.breadcrumbs-text
+{
+    color: #696969;
+    padding-left: 10px;
 }
 
 .breadcrumbs-container
