--- a/store/templates/store/page_layout.html
+++ b/store/templates/store/page_layout.html
@@ -19,12 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
-<<<<<<< HEAD
-    </head>
-=======
-
   </head>
->>>>>>> d5eadce13554a004ac324c4152b893f70f01b78d
   <body>
     <div class="top-notifications-container">
       {% block top_notifications %}
@@ -89,7 +84,9 @@
       {% block breadcrumbs %}
         <div class="breadcrumbs-wrapper d-flex justify-content-center align-items-center mt-2">
           <div class="breadcrumbs-content d-flex">
-            {% block breadcrumbs_text %}<a href="#" class="breadcrumbs-link">Development</a> / <a href="#" class="breadcrumbs-link">Testing</a> / <span href="#" class="breadcrumbs-text">Breadcrumbs</a>{% endblock %}
+            {% block breadcrumbs_text %}
+              <a href="#" class="breadcrumbs-link">Development</a> / <a href="#" class="breadcrumbs-link">Testing</a> / <span href="#" class="breadcrumbs-text">Breadcrumbs</a>
+                {% endblock %}
           </div>
         </div>
       {% endblock %}
@@ -114,4 +111,3 @@
     </div>
   </body>
 </html>
-
