--- a/store/static/css/store_styles.css
+++ b/store/static/css/store_styles.css
@@ -138,6 +138,112 @@ p.specification-placeholder-label
 {
     width: fit-content;
     font-weight: 600;
-
     transition: background-color 150ms;
+}
+
+.product-content-wrapper
+{
+  background-color: lightgray;
+}
+
+.product-content
+{
+    width: 60%;
+}
+
+.product-image-wrapper
+{
+  height: 500px;
+  flex-grow: 1;
+  padding: 3rem;
+  background-color: white;
+  border-radius: 5px;
+  /* border: 1px solid darkgray; */
+}
+
+.product-image
+{
+    height: 100%;
+    /* padding: 3em 0; */
+}
+
+.product-price-wrapper
+{
+    width: 350px;
+    background-color: white;
+    margin-left: 4rem;
+    border-radius: 5px;
+}
+
+.price-wrapper
+{
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    padding: 0.4rem 0;
+}
+
+.btn-check-availability
+{
+    border-radius: 4px;
+    height: 2.4rem;
+    text-align: center;
+    background-color: rgb(56, 157, 56);
+    color: white;
+    transition: background-color 150ms ease-in-out;
+}
+
+.btn-check-availability:hover
+{
+    background-color: rgb(61, 142, 61);
+    color: white;
+}
+
+.ratings-star
+{
+    font-size: 24px;
+    color: rgb(227, 218, 85);
+    text-shadow: 0 0 2px black;
+}
+
+.ratings-text
+{
+    color: darkslategray;
+    font-size: 1.2rem;
+    margin-top: -2px;
+}
+
+.add-review a
+{
+    text-decoration: none;
+    transition: color 150ms ease-in-out;
+}
+
+.add-review a:hover
+{
+    color: rgb(119, 126, 126);
+}
+
+.sale-container
+{
+    width: 60%;
+}
+
+.new-price
+{
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-top: -3px;
+}
+
+.product-title
+{
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.product-subtitle
+{
+  font-weight: 500;
+  font-size: 1.2rem;
 }
