--- a/store/templates/store/hyperspectral_tv.html
+++ b/store/templates/store/hyperspectral_tv.html
@@ -1,7 +1,67 @@
 {% extends 'store/page_layout.html' %}
+{% load static %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}{{ title_short }}{% endblock %}
 
 {% block breadcrumbs_text %}
-    <a href="#" class="breadcrumbs-link ps-1">Products</a> / <a href="#" class="breadcrumbs-link">Televisions</a> / <span href="#" class="breadcrumbs-text">Hyperspectral TV</a>
-{% endblock %}
+<a href="#" class="breadcrumbs-link ps-1">Products</a> / <a href="#" class="breadcrumbs-link">Televisions</a> / <span href="#" class="breadcrumbs-text">{{ title_short }}</a>
+  {% endblock %}
+
+  {% block product_information %}
+  <div class="product-content-wrapper d-flex justify-content-center align-items-center mt-1">
+    <div class="product-content d-flex justify-content-center align-items-center flex-column mt-2">
+      <div class="d-flex justify-content-center flex-column align-items-center">
+        <span class="product-title">{{ title_long }}</span>
+        <span class="product-subtitle">{{ model_number }}</span>
+      </div>
+      <div class="d-flex flex-row">
+        <div class="product-image-wrapper d-flex align-items-center justify-content-center flex-grow-0 my-5">
+          <img src="{% static 'images/smart-tv.jpg' %}" alt="product image" class="product-image">
+        </div>
+
+        <div class="product-price-wrapper flex-shrink-0 px-4 my-5">
+          <div class="price-wrapper w-100 mt-3">
+            <span class="price w-100">{% if sale_price %}<s>${{ price }}</s>{% else %}${{ price }}{% endif %}</span>
+          </div>
+          {% if sale_price %}
+          <div class="sale-wrapper w-100 mt-1 d-flex justify-content-center align-items-center">
+            <div class="sale-contaier d-flex align-items-center">
+              <span class="badge bg-danger d-flex">SALE!</span>
+              <span class="new-price ms-2 d-flex">Now only for <b class="ps-1">${{ sale_price }}<b></span>
+            </div>
+          </div>
+          {% endif %}
+          <div class="w-100 mt-4">
+            <a class="btn btn-primary w-100" href="#">BUY NOW</a>
+          </div>
+          <div class="w-100 mt-2">
+            <a class="btn btn-secondary w-100" href="#">BUY ON AMAZON</a>
+          </div>
+          <div class="check-availability-wrapper w-100 mt-4 d-flex justify-content-center align-content-center">
+            <a href="#" class="btn btn-check-availability w-100 d-flex justify-content-center">
+              <span class="d-flex align-items-center"><i class="fa-solid fa-boxes-stacked pe-2"></i>Check availability
+                in
+                store</span>
+            </a>
+          </div>
+
+          <div class="ratings-wrapper d-flex flex-column mt-4 justify-content-center">
+            <span class="ratings-text d-flex justify-content-center">
+              Rating: 5 stars (42 reviews)
+            </span>
+            <div class="ratings-stars d-flex justify-content-center mt-2">
+              <i class="fa-solid fa-star ratings-star"></i>
+              <i class="fa-solid fa-star ratings-star"></i>
+              <i class="fa-solid fa-star ratings-star"></i>
+              <i class="fa-solid fa-star ratings-star"></i>
+              <i class="fa-solid fa-star ratings-star"></i>
+            </div>
+            <div class="add-review d-flex justify-content-center mt-3">
+              <a href="#"><i class="fa-solid fa-pen me-2 mb-4"></i>Write a review</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endblock %}
