reindented css; added description

--- a/store/templates/store/hyperspectral_tv.html
+++ b/store/templates/store/hyperspectral_tv.html
@@ -39,9 +39,7 @@
           </div>
           <div class="check-availability-wrapper w-100 mt-4 d-flex justify-content-center align-content-center">
             <a href="#" class="btn btn-check-availability w-100 d-flex justify-content-center">
-              <span class="d-flex align-items-center"><i class="fa-solid fa-boxes-stacked pe-2"></i>Check availability
-                in
-                store</span>
+              <span class="d-flex align-items-center"><i class="fa-solid fa-boxes-stacked pe-2"></i>Check availability in store</span>
             </a>
           </div>
 
@@ -61,6 +59,10 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="description-wrapper mb-4">
+        {{ brief_description }}
       </div>
     </div>
   </div>
