--- a/store/static/css/store_styles.css
+++ b/store/static/css/store_styles.css
@@ -1,154 +1,153 @@
 body
 {
-    width: 100%;
+  width: 100%;
 }
 
 a
 {
-    color: inherit;
+  color: inherit;
 }
 
 .brand-navbar-container, .navbar-container, .logo-container
 {
-    height: 4rem;
+  height: 4rem;
 }
 
 .navbar-container-wrapper, .breadcrumbs-content, .product-menu-content
 {
-    width: 50%;
-    max-width: 50rem;
+  width: 50%;
+  max-width: 50rem;
 }
 
 .product-menu-container
 {
-    height: 3rem;
-    background-color: #1966af;
+  height: 3rem;
+  background-color: #1966af;
 }
 
 .breadcrumbs-content
 {
-    background-color: white;
-    color: #b5b5b5;
-    height: 100%;
-    font-weight: 600;
-    font-size: 15px;
+  background-color: white;
+  color: #b5b5b5;
+  height: 100%;
+  font-weight: 600;
+  font-size: 15px;
 }
 
 .breadcrumbs-link
 {
-    padding: 0 0.8rem;
-    color: #1966af;
-    text-decoration: none;
-    transition: color 150ms;
+  padding: 0 0.8rem;
+  color: #1966af;
+  text-decoration: none;
+  transition: color 150ms;
 }
 
 .breadcrumbs-link:hover
 {
-    color: #17436c;
+  color: #17436c;
 }
 
 .breadcrumbs-text
 {
-    color: #696969;
-    padding-left: 10px;
+  color: #696969;
+  padding-left: 10px;
 }
 
 .breadcrumbs-container
 {
-    height: 2rem;
+  height: 2rem;
 }
 
 .product-information-wrapper
 {
-    min-height: 10rem;
-    background-color: beige;
+  min-height: 10rem;
+  background-color: beige;
 }
 
 p.information-placeholder-label
 {
-    width: 100%;
-    text-align: center;
-    font-weight: 700;
-    font-size: large;
+  width: 100%;
+  text-align: center;
+  font-weight: 700;
+  font-size: large;
 }
 
 .product-specifications-wrapper
 {
-    min-height: 10rem;
-    background-color: coral;
+  min-height: 10rem;
+  background-color: coral;
 }
 
 p.specification-placeholder-label
 {
-    width: 100%;
-    text-align: center;
-    font-weight: 700;
-    font-size: large;
+  width: 100%;
+  text-align: center;
+  font-weight: 700;
+  font-size: large;
 }
 
 .product-reviews-wrapper
 {
-    min-height: 10rem;
-    background-color: cyan;
+  min-height: 10rem;
+  background-color: cyan;
 }
 
 p.specification-placeholder-label
 {
-    width: 100%;
-    text-align: center;
-    font-weight: 700;
-    font-size: large;
+  width: 100%;
+  text-align: center;
+  font-weight: 700;
+  font-size: large;
 }
 
 .logo-wrapper
 {
-    max-height: 100%;
+  max-height: 100%;
 }
 
 .navbar-logo-image
 {
-    max-width: 100%;
-    height: 100%;
+  max-width: 100%;
+  height: 100%;
 }
 
 .navbar-buttons
 {
-    font-size: 32px;
-    cursor: pointer;
+  font-size: 32px;
+  cursor: pointer;
 }
 
 .navbar-menu-item
 {
-    color: white;
-    background-color: inherit;
+  color: white;
+  background-color: inherit;
 }
 
 .menu-item-wrapper
 {
-    cursor: pointer;
-    font-weight: 500;
+  cursor: pointer;
+  font-weight: 500;
 }
 
 .menu-item-wrapper:hover
 {
-    background-color: #185792be;
+  background-color: #185792be;
 }
 
 .all-products-menu
 {
-    width: fit-content;
-    font-weight: 600;
-    transition: background-color 150ms;
+  width: fit-content;
+  transition: background-color 150ms;
 }
 
 .product-content-wrapper
 {
-  background-color: lightgray;
+  background-color: #ececec;
 }
 
 .product-content
 {
-    width: 60%;
+  width: 60%;
 }
 
 .product-image-wrapper
@@ -158,82 +157,80 @@ p.specification-placeholder-label
   padding: 3rem;
   background-color: white;
   border-radius: 5px;
-  /* border: 1px solid darkgray; */
 }
 
 .product-image
 {
-    height: 100%;
-    /* padding: 3em 0; */
+  height: 100%;
 }
 
 .product-price-wrapper
 {
-    width: 350px;
-    background-color: white;
-    margin-left: 4rem;
-    border-radius: 5px;
+  width: 350px;
+  background-color: white;
+  margin-left: 4rem;
+  border-radius: 5px;
 }
 
 .price-wrapper
 {
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: center;
-    padding: 0.4rem 0;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 0.4rem 0;
 }
 
 .btn-check-availability
 {
-    border-radius: 4px;
-    height: 2.4rem;
-    text-align: center;
-    background-color: rgb(56, 157, 56);
-    color: white;
-    transition: background-color 150ms ease-in-out;
+  border-radius: 4px;
+  height: 2.4rem;
+  text-align: center;
+  background-color: rgb(56, 157, 56);
+  color: white;
+  transition: background-color 150ms ease-in-out;
 }
 
 .btn-check-availability:hover
 {
-    background-color: rgb(61, 142, 61);
-    color: white;
+  background-color: rgb(61, 142, 61);
+  color: white;
 }
 
 .ratings-star
 {
-    font-size: 24px;
-    color: rgb(227, 218, 85);
-    text-shadow: 0 0 2px black;
+  font-size: 24px;
+  color: rgb(227, 218, 85);
+  text-shadow: 0 0 2px black;
 }
 
 .ratings-text
 {
-    color: darkslategray;
-    font-size: 1.2rem;
-    margin-top: -2px;
+  color: darkslategray;
+  font-size: 1.2rem;
+  margin-top: -2px;
 }
 
 .add-review a
 {
-    text-decoration: none;
-    transition: color 150ms ease-in-out;
+  text-decoration: none;
+  transition: color 150ms ease-in-out;
 }
 
 .add-review a:hover
 {
-    color: rgb(119, 126, 126);
+  color: rgb(119, 126, 126);
 }
 
 .sale-container
 {
-    width: 60%;
+  width: 60%;
 }
 
 .new-price
 {
-    font-size: 1.1rem;
-    font-weight: 600;
-    margin-top: -3px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  margin-top: -3px;
 }
 
 .product-title
@@ -246,4 +243,11 @@ p.specification-placeholder-label
 {
   font-weight: 500;
   font-size: 1.2rem;
+}
+
+.description-wrapper
+{
+  width: 80%;
+  text-align: center;
+  font-weight: 500;
 }
