--- a/store/templates/store/hyperspectral_tv.html
+++ b/store/templates/store/hyperspectral_tv.html
@@ -17,7 +17,7 @@
 
       <div class="product-details">
         <div class="product-image-wrapper">
-          <img src="{% static 'images/smart-tv.jpg' %}" alt="product image" class="product-image">
+          <img src="{{ product_image }}" alt="product image" class="product-image">
         </div>
 
         <div class="product-price-wrapper">
