--- a/store/static/css/store_styles.css
+++ b/store/static/css/store_styles.css
@@ -72,20 +72,12 @@ p.information-placeholder-label
   font-size: large;
 }
 
-
-
 p.specification-placeholder-label
 {
   width: 100%;
   text-align: center;
   font-weight: 700;
   font-size: large;
-}
-
-.product-reviews-wrapper
-{
-  min-height: 10rem;
-  background-color: cyan;
 }
 
 p.specification-placeholder-label
@@ -324,7 +316,7 @@ p.specification-placeholder-label
 /*** Product specifications ***/
 /*****************************************************/
 
-.product-specifications-wrapper
+.product-specifications-wrapper, .product-reviews-wrapper
 {
   margin: 3rem 0;
   display: flex;
@@ -332,7 +324,7 @@ p.specification-placeholder-label
   align-items: center;
 }
 
-.product-specifications-wrapper .title
+.product-specifications-wrapper .title, .product-reviews-wrapper .title
 {
   font-weight: 700;
   font-size: 1.6rem;
@@ -340,7 +332,7 @@ p.specification-placeholder-label
   text-align: left;
 }
 
-.product-specifications
+.product-specifications, .product-reviews
 {
   width: 60%;
 }
@@ -395,3 +387,7 @@ p.specification-placeholder-label
   font-size: 0.8rem;
   color: #696969;
 }
+
+/*****************************************************/
+/*** Product reviews ***/
+/*****************************************************/
